[project]
name = "financial-nlp"
version = "0.1.0"
description = "Financial NLP project"
author = [{ name = "Jordi Agut", email = "joas1847@gmail.com" }]

requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "loguru==0.7.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "alpaca-py==0.40.1",
    "pyarrow==20.0.0",
    "datasets==3.6.0",
    "wordcloud==1.9.4",
    "huggingface_hub[cli]==0.33.2",
    "python-dotenv==1.1.1",
    "ipywidgets==8.1.7",
    "torch==2.7.1",
    "scikit-learn==1.7.0",
    "transformers[torch]==4.53.2",
    "optuna==4.4.0",
    "dotenv",
    "tweepy==4.14.0",
]